# supcat

./: Cargo.toml  README.md  dist-workspace.toml  progress.md  public.key  todo.md
.github/workflows/: apt_deb.yml  pages.yml  release.yml  repo.yml  static.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: integration_tests.rs
crates/cli/wix/: main.wxs
crates/common/src/: lib.rs  node.rs  visible_node.rs
crates/core/: Cargo.toml
crates/core/src/: flatten.rs  lib.rs  walker.rs
crates/ignore/: Cargo.toml
crates/output/: Cargo.toml
crates/output/src/: lib.rs
crates/tui/: Cargo.toml
crates/tui/src/: lib.rs  state.rs
www/: index.html
